categories sytem + fix data leakage on API
